[package]
name = "rpwgen"
version = "1.0.0"
authors = ["taronaldinho <kotaro.yamashita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = "3.0.0-beta.1"
rand = "0.7"
rand_distr = "0.2"